--- a/src/css/RenderToDo.css
+++ b/src/css/RenderToDo.css
@@ -13,6 +13,11 @@
   border-radius: 100%;
 }
 
+.todo-description {
+  padding: 0 20px 0 20px;
+  word-break: break-all;
+}
+
 .todo-list {
   margin-bottom: 20px;
   row-gap: 12px;
@@ -28,23 +33,22 @@
   max-width: 50%;
 }
 
+.renderToDo {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
 .todo-list-container {
   position: relative;
   word-break: break-all;
   padding: 30px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+
   margin-bottom: 10px;
   flex-wrap: wrap;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.desc {
-  padding-right: 10px;
-  word-break: break-all;
 }
 
 .todo-list-content__buttons-date {
